scriptedLaunchOpts